<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/gn_background_holo_light" >

<!-- Gionee <wanghaiyan> <2015-03-18> modify for CR01455297 begin -->
    <amigo.widget.AmigoTextView
        android:id="@+id/tv_data_exist_info"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center_horizontal"
        android:layout_marginTop="100dp"
        android:text="@string/toast_import_no_data"
        android:textColor="@color/note_nothing"
        android:textSize="@dimen/super_large_text_size" />
<!-- Gionee <wanghaiyan> <2015-03-18> modify for CR01455297 end -->
    
    <amigo.widget.AmigoListView
        android:id="@+id/lv_items"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" >
    </amigo.widget.AmigoListView>

    <amigo.widget.AmigoButton
        android:id="@+id/button_import"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginStart="8dp"
		android:layout_marginEnd="8dp"
		android:layout_marginBottom="8dp"
        android:text="@string/str_import" />

    <LinearLayout
        android:id="@+id/btns"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/gn_cab_background_bottom_light"
        android:gravity="center_vertical"
        android:visibility="gone" >

        <LinearLayout
            android:id="@+id/layout_btn_cancel"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="?android:attr/actionBarItemBackground"
            android:clickable="true"
            android:gravity="center" >

            <ImageView
                android:id="@+id/btn_cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="false"
                android:src="@drawable/gn_com_cancel" />

            <amigo.widget.AmigoTextView
                android:id="@+id/text_cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="false"
                android:text="@string/Cancel"
                android:textColor="@color/import_export_text_color"
                android:textSize="@dimen/small_text_size" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_btn_import"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="?android:attr/actionBarItemBackground"
            android:clickable="true"
            android:gravity="center" >

            <ImageView
                android:id="@+id/btn_import"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="false"
                android:src="@drawable/gn_com_import_dis" />

            <amigo.widget.AmigoTextView
                android:id="@+id/text_import"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="false"
                android:text="@string/str_import"
                android:textColor="@color/import_export_text_color"
                android:textSize="@dimen/small_text_size" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_btn_allselect"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="?android:attr/actionBarItemBackground"
            android:clickable="true"
            android:gravity="center" >

            <ImageView
                android:id="@+id/btn_allselect"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="false"
                android:src="@drawable/gn_com_select_all" />

            <amigo.widget.AmigoTextView
                android:id="@+id/text_allselect"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="false"
                android:text="@string/str_all_select"
                android:textColor="@color/import_export_text_color"
                android:textSize="@dimen/small_text_size" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>
