<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gn_background_holo_light"
    android:orientation="vertical" >

    <amigo.widget.AmigoTextView
        android:id="@+id/tv_data_exist_info"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="120dp"
        android:layout_weight="1"
        android:gravity="center_horizontal"
        android:text="@string/toast_export_no_data"
        android:textColor="@color/note_nothing"
        android:textSize="@dimen/super_large_text_size" />

    <amigo.widget.AmigoListView
        android:id="@+id/lv_items"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:divider="@null"
        android:listSelector="#00FFFFFF"
        android:paddingStart="@dimen/listview_margin_left_right"
        android:paddingEnd="@dimen/listview_margin_left_right"
        android:scrollbarStyle="outsideOverlay" >
    </amigo.widget.AmigoListView>

    <amigo.widget.AmigoButton
        android:id="@+id/button_export"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:gravity="center"
        android:text="@string/str_export" />

    <LinearLayout
        android:id="@+id/btns"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/gn_cab_background_bottom_light"
        android:gravity="center_vertical"
        android:visibility="gone" >

        <LinearLayout
            android:id="@+id/layout_btn_cancel"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="?android:attr/actionBarItemBackground"
            android:clickable="true"
            android:gravity="center" >

            <ImageView
                android:id="@+id/btn_cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="false"
                android:src="@drawable/gn_com_cancel" />

            <amigo.widget.AmigoTextView
                android:id="@+id/text_cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="false"
                android:text="@string/Cancel"
                android:textColor="@color/import_export_text_color"
                android:textSize="@dimen/small_text_size" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_btn_export"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="?android:attr/actionBarItemBackground"
            android:clickable="true"
            android:gravity="center" >

            <ImageView
                android:id="@+id/btn_export"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="false"
                android:src="@drawable/gn_com_export_dis" />

            <amigo.widget.AmigoTextView
                android:id="@+id/text_export"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="false"
                android:text="@string/str_export"
                android:textColor="@color/import_export_text_color"
                android:textSize="@dimen/small_text_size" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_btn_allselect"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="?android:attr/actionBarItemBackground"
            android:clickable="true"
            android:gravity="center" >

            <ImageView
                android:id="@+id/btn_allselect"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="false"
                android:src="@drawable/gn_com_select_all" />

            <amigo.widget.AmigoTextView
                android:id="@+id/text_allselect"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="false"
                android:text="@string/str_all_select"
                android:textColor="@color/import_export_text_color"
                android:textSize="@dimen/small_text_size" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>